k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  reflector
  labels:
    name:  reflector
spec:
  replicas: 5
  selector:
    matchLabels:
      name: reflector
  template:
    metadata:
      labels:
        name:  reflector
    spec:
      containers:
      - image:  quay.io/dhruvasagar/reflector:latest
        name: reflector
        ports:
        - containerPort:  3000
        imagePullPolicy: Always
