k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: reflector
  labels:
    app: reflector
spec:
  selector:
    name: reflector
  ports:
  - name: reflector
    port: 3000
    targetPort: 3000
