k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: reflector
spec:
  rules:
  - host: reflector.dev.klstr.io
    http:
      paths:
      - path: /
        backend:
          serviceName: reflector
          servicePort: 3000
